src/styles/base.scss
:root {
  color-scheme: dark;
}

html, body {
  @apply font-manrope font-400;
  @apply bg-black text-white;
  @apply scroll-smooth;
  @apply scroll-p-24;
}

main {
  @apply py-16;
}

article {
  @apply prose prose-lg prose-invert max-w-full;
  @apply prose-h3:font-[400];
}

:is(h1, h2, h3, h4, h5, h6) {
  font-family: "Lexend", sans-serif;
}

button,
a {
    transition: box-shadow 0.2s ease-out;
    @apply transition-all duration-200 ease-out;
    @apply focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-opacity-90;
    @apply ring-offset-2 ring-offset-black;
    @apply rounded-md focus:outline-none;
    @apply scale-100;

    &:active {
      @apply scale-90;
    }
}

a {
    @apply text-primary;
    text-decoration: 2px solid underline;
    text-underline-offset: 0.2rem;
    display: inline-block;
    cursor: pointer;

    &:hover,
    &:focus {
        text-decoration-style: wavy;
        @apply text-primary/70;
    }
}

